--- a/Template.Web/Features/Richiesta/Richiesta.cshtml
+++ b/Template.Web/Features/Richiesta/Richiesta.cshtml
@@ -145,9 +145,9 @@
                     });
                 },
         validateForm(event) {
-            this.errorMessage = ''; // Resetta il messaggio di errore
+            this.errorMessage = ''; // Reset error message
 
-            // Validazione dei campi obbligatori
+                    // Validation of mandatory fields
             if (!this.dataInizio || !this.dataFine) {
                 this.errorMessage = "Data Inizio e Data Fine sono obbligatorie.";
                 event.preventDefault();
@@ -161,7 +161,7 @@
                     return false;
                 }
 
-                // Confronto degli orari
+                // Comparison of working hours
                 if (new Date('1970-01-01T' + this.oraFine) < new Date('1970-01-01T' + this.oraInizio)) {
                     this.errorMessage = "L'ora fine non può essere precedente all'ora inizio.";
                     event.preventDefault();
@@ -169,7 +169,7 @@
                 }
             }
 
-            // Confronto delle date
+            // Comparison of dates
             if (new Date(this.dataFine) < new Date(this.dataInizio)) {
                 this.errorMessage = "La data fine non può essere precedente alla data inizio.";
                 event.preventDefault();
@@ -190,7 +190,7 @@
         dataFine(newValue) {
             if (new Date(newValue) < new Date(this.dataInizio)) {
                 this.errorMessage = "La data fine non può essere precedente alla data inizio.";
-                this.dataFine = this.dataInizio; // Correggi automaticamente
+                this.dataFine = this.dataInizio; // Auto correct
             }
             this.checkWeekend();
                 }
