--- a/Template.Web/Features/Richiesta/Richiesta.cshtml
+++ b/Template.Web/Features/Richiesta/Richiesta.cshtml
@@ -5,206 +5,203 @@
 
 <!DOCTYPE html>
 <html lang="it">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Richiesta Permessi/Ferie</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
-    <style>
-        .custom-container {
-            max-width: 800px;
-        }
-    </style>
-</head>
-<body>
-    <div class="container custom-container mt-5" id="app">
-        <a href="/" class="text-decoration-none">
-            <i class="bi bi-house-door"></i> Torna alla Home
-        </a>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Richiesta Permessi/Ferie</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+        <style>
+            .custom-container {
+                max-width: 800px;
+            }
+        </style>
+    </head>
+    <body>
+        <div class="container custom-container mt-5" id="app">
+            <a href="/" class="text-decoration-none">
+                <i class="bi bi-house-door"></i> Torna alla Home
+            </a>
 
-        @if (User.IsInRole("Dipendente"))
-        {
-            <div class="d-flex justify-content-end">
-                <button onclick="window.location.href='@Url.Action("RichiesteInArrivo", "Richiesta")'" class="btn btn-primary btn-mg">Verifica stato delle richieste</button>
-            </div>
-        }
+            <!--  Button to visualize requests, if user is "Dipendente" -->
+            @if (User.IsInRole("Dipendente"))
+            {
+                <div class="d-flex justify-content-end">
+                    <button onclick="window.location.href='@Url.Action("RichiesteInArrivo", "Richiesta")'" class="btn btn-primary btn-mg">Verifica stato delle richieste</button>
+                </div>
+            }
 
+            <h1 class="text-left mb-4">Richiesta Permessi/Ferie</h1>
 
-
-        <h1 class="text-left mb-4">Richiesta Permessi/Ferie</h1>
-
-        @if (TempData["Message"] != null)
-        {
-            <div class="modal fade" id="successModal" tabindex="-1" aria-labelledby="successModalLabel" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="successModalLabel">Successo</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            @TempData["Message"]
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>
+            <!-- Area to show success messages -->
+            @if (TempData["Message"] != null)
+            {
+                <div class="modal fade" id="successModal" tabindex="-1" aria-labelledby="successModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="successModalLabel">Successo</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                @TempData["Message"]
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        }
+            }
 
-        <!-- Area to show error messages -->
-        <div v-if="errorMessage" class="alert alert-danger" role="alert">
-            {{ errorMessage }}
+            <!-- Area to show error messages -->
+            <div v-if="errorMessage" class="alert alert-danger" role="alert">
+                {{ errorMessage }}
+            </div>
+
+            <!-- Form to post request -->
+            <form id="formRichiesta" asp-action="PostRequest" method="post" class="needs-validation" novalidate>
+                <div class="row mb-3">
+                    <div class="col-md-6">
+                        <label asp-for="Tipologia" class="form-label">Tipologia:</label>
+                        <select v-model="tipologia" class="form-select">
+                            <option value="Permessi">Permessi</option>
+                            <option value="Ferie">Ferie</option>
+                        </select>
+                        <input type="hidden" name="Tipologia" :value="tipologia" />
+                    </div>
+                </div>
+
+                <!-- If the type is "Permessi" -->
+                <div v-if="tipologia == 'Permessi'" class="row mb-3">
+                    <div class="col-sm-6">
+                        <label asp-for="OraInizio" class="form-label">Dalle:</label>
+                        <input v-model="oraInizio" asp-for="OraInizio" type="time" class="form-control" />
+                    </div>
+                    <div class="col-sm-6">
+                        <label asp-for="OraFine" class="form-label">Alle:</label>
+                        <input v-model="oraFine" asp-for="OraFine" type="time" class="form-control" />
+                    </div>
+                    <div class="row mb-3">
+                        <div class="col-md-12">
+                            <label asp-for="DataInizio" class="form-label" style="padding-top: 10px;">Data</label>
+                            <input v-model="dataInizio" asp-for="DataInizio" type="date" class="form-control"/>
+                        </div>
+                        <div class="col-md-12"> 
+                           <input v-model="dataFine" asp-for="DataFine" type="hidden" class="form-control"/>
+                        </div> 
+                    </div>
+                </div>
+
+                <!-- If the type is "Ferie" -->
+                <div v-if="tipologia == 'Ferie'" class="row mb-3">
+                    <div class="col-md-12">
+                        <label asp-for="DataInizio" class="form-label">Data Inizio:</label>
+                        <input v-model="dataInizio" asp-for="DataInizio" type="date" class="form-control"/>
+                    </div>
+                    <div class="col-md-12">
+                        <label asp-for="DataFine" class="form-label" style="padding-top: 10px;">Data Fine:</label>
+                        <input v-model="dataFine" asp-for="DataFine" type="date" class="form-control"/>
+                    </div>
+                </div>
+
+                <div class="d-flex justify-content-end">
+                    <button type="submit" class="btn btn-primary btn-lg">Invia</button>
+                </div>
+
+                <!--  Button for management of request, if user is "Manager"" or "CEO"" -->
+                @if (User.IsInRole("Manager") || User.IsInRole("CEO"))
+                {
+                    <div class="container-fluid bg-light bottom-0 w-100 text-center p-3 mt-5">
+                        <p>Gestisci qui le richieste dei dipendenti del team:</p>
+                        <button onclick="window.location.href='@Url.Action("RichiesteInArrivo","Richiesta")'" class="btn btn-primary btn-mg">Gestisci Richieste</button>
+                    </div>
+                }
+            </form>
         </div>
 
-        <form id="formRichiesta" asp-action="PostRequest" method="post" class="needs-validation" novalidate>
-            <div class="row mb-3">
-                <div class="col-md-6">
-                    <label asp-for="Tipologia" class="form-label">Tipologia:</label>
-                    <select v-model="tipologia" class="form-select">
-                        <option value="Permessi">Permessi</option>
-                        <option value="Ferie">Ferie</option>
-                    </select>
-                    <input type="hidden" name="Tipologia" :value="tipologia" />
-                </div>
-            </div>
+        <script>
+            new Vue({
+                el: '#app',
+                data: {
+                    tipologia: 'Permessi',
+                    oraInizio: null,
+                    oraFine: null,
+                    dataInizio: '',
+                    dataFine: '',
+                    errorMessage: '' 
+                },
+                methods: {
+                    checkWeekend() {
+                        const dataFields = ['dataInizio', 'dataFine'];
+                        dataFields.forEach(field => {
+                            const date = new Date(this[field]);
+                            const day = date.getDay(); // 0 = Domenica, 6 = Sabato
 
-            <!-- Show time fields only if the type is "Permissions" -->
-            <div v-if="tipologia == 'Permessi'" class="row mb-3">
-                <div class="col-sm-6">
-                    <label asp-for="OraInizio" class="form-label">Dalle:</label>
-                    <input v-model="oraInizio" asp-for="OraInizio" type="time" class="form-control" />
-                </div>
-                <div class="col-sm-6">
-                    <label asp-for="OraFine" class="form-label">Alle:</label>
-                    <input v-model="oraFine" asp-for="OraFine" type="time" class="form-control" />
-                </div>
-                <div class="row mb-3">
-                    <div class="col-md-12">
-                        <label asp-for="DataInizio" class="form-label" style="padding-top: 10px;">Data</label>
-                        <input v-model="dataInizio" asp-for="DataInizio" type="date" class="form-control" value="" />
-                    </div>
-                    <div class="col-md-12">
-                        <input v-model="dataFine" asp-for="DataFine" type="hidden" class="form-control" value="dataFine" />
-                    </div>
-                </div>
-            </div>
+                            if (day === 0 || day === 6) {
+                                this.errorMessage = 'Non puoi selezionare giorno del weekend';
+                                this[field] = ''; // Delete the selected date
+                            }
+                        });
+                    },
+                    validateForm(event) {
+                        this.errorMessage = ''; 
 
-            <div v-if="tipologia == 'Ferie'" class="row mb-3">
-                <div class="col-md-12">
-                    <label asp-for="DataInizio" class="form-label">Data Inizio:</label>
-                    <input v-model="dataInizio" asp-for="DataInizio" type="date" class="form-control" value="" />
-                </div>
-                <div class="col-md-12">
-                    <label asp-for="DataFine" class="form-label" style="padding-top: 10px;">Data Fine:</label>
-                    <input v-model="dataFine" asp-for="DataFine" type="date" class="form-control" value="dataFine" />
-                </div>
-            </div>
-
-            <div class="d-flex justify-content-end">
-                <button type="submit" class="btn btn-primary btn-lg">Invia</button>
-            </div>
-
-            @if (User.IsInRole("Manager") || User.IsInRole("CEO"))
-            {
-                <div class="container-fluid bg-light bottom-0 w-100 text-center p-3 mt-5">
-                    <p>Gestisci qui le richieste dei dipendenti del team:</p>
-                    <button onclick="window.location.href='@Url.Action("RichiesteInArrivo","Richiesta")'" class="btn btn-primary btn-mg">Gestisci Richieste</button>
-                </div>
-            }
-
-        </form>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        new Vue({
-            el: '#app',
-            data: {
-                tipologia: 'Permessi',
-                oraInizio: null,
-                oraFine: null,
-                dataInizio: '',
-                dataFine: '',
-                errorMessage: '' // Variable to show error messages
-            },
-            methods: {
-                checkWeekend() {
-                    const dataFields = ['dataInizio', 'dataFine'];
-                    dataFields.forEach(field => {
-                        const date = new Date(this[field]);
-                        const day = date.getDay(); // 0 = Domenica, 6 = Sabato
-
-                        if (day === 0 || day === 6) {
-                            this.errorMessage = 'Non puoi selezionare giorno del weekend';
-                            this[field] = ''; // Delete the selected date
+                        // Prevent empty input
+                        if (!this.dataInizio || !this.dataFine) {
+                            this.errorMessage = "Data Inizio e Data Fine sono obbligatorie.";
+                            event.preventDefault();
+                            return false;
                         }
-                    });
-                },
-        validateForm(event) {
-            this.errorMessage = ''; // Resetta il messaggio di errore
-
-            // Validazione dei campi obbligatori
-            if (!this.dataInizio || !this.dataFine) {
-                this.errorMessage = "Data Inizio e Data Fine sono obbligatorie.";
-                event.preventDefault();
-                return false;
-            }
-
-            if (this.tipologia === 'Permessi') {
-                if (!this.oraInizio || !this.oraFine) {
-                    this.errorMessage = "Gli orari di inizio e fine sono obbligatori per Permessi.";
-                    event.preventDefault();
-                    return false;
-                }
-
-                // Confronto degli orari
-                if (new Date('1970-01-01T' + this.oraFine) < new Date('1970-01-01T' + this.oraInizio)) {
-                    this.errorMessage = "L'ora fine non può essere precedente all'ora inizio.";
-                    event.preventDefault();
-                    return false;
-                }
-            }
-
-            // Confronto delle date
-            if (new Date(this.dataFine) < new Date(this.dataInizio)) {
-                this.errorMessage = "La data fine non può essere precedente alla data inizio.";
-                event.preventDefault();
-                return false;
-            }
-
-            return true;
-        }
-
-            },
-            watch: {
-                dataInizio(newValue) {
-                    if (!this.dataFine || new Date(this.dataFine) < new Date(newValue)) {
-                        this.dataFine = newValue;
+                        // Prevent empty input for "Permessi"
+                        if (this.tipologia === 'Permessi') {
+                            if (!this.oraInizio || !this.oraFine) {
+                                this.errorMessage = "Gli orari di inizio e fine sono obbligatori per Permessi.";
+                                event.preventDefault();
+                                return false;
+                            }
+                            // Comparison of times
+                            if (new Date('1970-01-01T' + this.oraFine) < new Date('1970-01-01T' + this.oraInizio)) {
+                                this.errorMessage = "L'ora fine non può essere precedente all'ora inizio.";
+                                event.preventDefault();
+                                return false;
+                            }
+                        }
+                         // Comparison of dates 
+                        if (new Date(this.dataFine) < new Date(this.dataInizio)) {
+                            this.errorMessage = "La data fine non può essere precedente alla data inizio.";
+                            event.preventDefault();
+                            return false;
+                        }
+                        return true;
                     }
-                    this.checkWeekend(); // Check whether the date is a Saturday or a Sunday
                 },
-        dataFine(newValue) {
-            if (new Date(newValue) < new Date(this.dataInizio)) {
-                this.errorMessage = "La data fine non può essere precedente alla data inizio.";
-                this.dataFine = this.dataInizio; // Correggi automaticamente
-            }
-            this.checkWeekend();
+                watch: {
+                    dataInizio(newValue) {
+                        if (!this.dataFine || new Date(this.dataFine) < new Date(newValue)) {
+                            this.dataFine = newValue;
+                        }
+                        this.checkWeekend(); // Check whether the date is a Saturday or a Sunday
+                    },
+                    dataFine(newValue) {
+                        if (new Date(newValue) < new Date(this.dataInizio)) {
+                            this.errorMessage = "La data fine non può essere precedente alla data inizio.";
+                            this.dataFine = this.dataInizio; 
+                        }
+                        this.checkWeekend();
+                    }
+                },
+                mounted() {
+                   var tempMessage = '@TempData["Message"]';
+                    if (tempMessage !== '') {
+                        var successModal = new bootstrap.Modal(document.getElementById('successModal'));
+                        successModal.show();
+                    }
+                    document.getElementById('formRichiesta').addEventListener('submit', this.validateForm);
                 }
-            },
-            mounted() {
-               var tempMessage = '@TempData["Message"]';
-                if (tempMessage !== '') {
-                    var successModal = new bootstrap.Modal(document.getElementById('successModal'));
-                    successModal.show();
-                }
-                document.getElementById('formRichiesta').addEventListener('submit', this.validateForm);
-            }
-        });
-    </script>
-
-</body>
+            });
+        </script>
+    </body>
 </html>
