--- a/Template.Web/wwwroot/css/HomeStyle.css
+++ b/Template.Web/wwwroot/css/HomeStyle.css
@@ -335,8 +335,7 @@ button[type="submit"].btn-primary.mt-2 {
 .timeFields-@day.Date.ToString("yyyy-MM-dd") input[type="time"] {
     width: 80%;
     padding: 3px 6px;
-    margin-bottom: 8px
-    border: 1px solid #ccc;
+    margin-bottom: 8px;
     border-radius: 5px;
     font-size: 11px;
     background-color: #fff;
